--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
         android:id="@+id/countView"
         android:layout_width="31dp"
         android:layout_height="39dp"
+        android:text="@string/_0"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        tools:text="0" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/tap_button"
